@@ -15,6 +15,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 """Archive commands for the GNU tar program."""
 import os
+import sys
 
 
 def extract_tar (archive, compression, cmd, verbosity, interactive, outdir):
@@ -61,4 +62,13 @@ def add_tar_opts (cmdlist, compression, verbosity):
     if verbosity > 1:
         cmdlist.append('--verbose')
     if progname == 'tar':
-        cmdlist.append('--force-local')
+        if sys.platform == 'darwin':
+            # On MacOS, the default tar does not support --force-local
+            # but "brew install gnu-tar" could have been used, so test for it
+            testcmdlist = [cmdlist[0], "--force-local", "--help"]
+            from .. import util
+            if util.run(testcmdlist) == 0:
+                cmdlist.append('--force-local')
+        else:
+            # assume "tar" is GNU tar and therefore supports --force-local
+            cmdlist.append('--force-local')
